# earth-sampler

./: .gitignore  LICENSE  environment.yaml  pyproject.toml  readme.md  sampleearth.py
src/sampleearth/: __main__.py  sampleearth.py
src/sampleearth/test/: sampleearth_test.py
