[build-system]
requires = ["setuptools>=61.0", "icosphere", "geopandas", "astropy"]
build-backend = "setuptools.build_meta"

[project]
name = "sampleearth"
version = "0.0.1"
authors = [
  { name="Joe Reed", email="jreed@hydrosat.com" },
]
description = "Create a point mesh on the surface of the earth, based on a sampled icosahedron."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/greyskyy/earth-sampler"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sampleearth*"]
exclude = ["sampleearth.test*"]
namespaces = false
